--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "axios": "^0.19.0",
     "dayjs": "^1.8.14",
+    "gsap": "^2.1.3",
+    "lodash": "^4.17.11",
     "nprogress": "^0.2.0",
     "register-service-worker": "^1.6.2",
     "simplex-noise": "^2.4.0",
