--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "ant-design-vue": "^1.3.9",
     "axios": "^0.19.0",
     "dayjs": "^1.8.14",
     "gsap": "^2.1.3",
+    "highlight.js": "^9.15.8",
+    "highlightjs-line-numbers.js": "^2.7.0",
     "lodash": "^4.17.11",
     "nprogress": "^0.2.0",
     "register-service-worker": "^1.6.2",
     "simplex-noise": "^2.4.0",
     "vue": "^2.6.6",
+    "vue-markdown": "^2.2.4",
+    "vue-markdown-highlight": "^1.0.5",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
@@ -32,6 +37,7 @@
     "@vue/eslint-config-standard": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-import": "^1.12.0",
     "chai": "^4.1.2",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
