--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ language: node_js
 node_js:
   - '10'
 cache: yarn
+before_install:
+  - openssl aes-256-cbc -K $encrypted_f96bfc023ea0_key -iv $encrypted_f96bfc023ea0_iv
+    -in id_rsa.enc -out ~/.ssh/id_rsa -d
+  - chmod 600 ~/.ssh/id_rsa
+  - echo -e "Host 47.111.7.94\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
 install:
   - yarn install
 script:
